syntax = "proto2";
package alluxio.grpc.block;

import "protocol.proto";

service BlockWorker {
  rpc ReadBlock (stream ReadRequest) returns (stream ReadResponse);
}

message ReadRequest {
  optional int64 block_id = 1;
  optional int64 offset = 2;
  optional int64 length = 3;
  // Whether the block should be promoted before reading
  optional bool promote = 4;
  optional int64 chunk_size = 5;

  // This is only set for UFS block read.
  optional alluxio.proto.dataserver.OpenUfsBlockOptions open_ufs_block_options = 6;

  // Read receipt
  optional int64 offset_received = 7;

  // Is position read to a small buffer
  optional bool position_short = 8;
}

// The read response.
// next available id: 2
message ReadResponse {
  optional Chunk chunk = 1;
}

// The data chunk.
// next available id: 2
message Chunk {
  optional bytes data = 1;
}
