syntax = "proto2";

package alluxio.proto.dataserver;

// Options to open a UFS block.
// next available id: 7
message OpenUfsBlockOptions {
  optional string ufs_path = 1;
  // The offset of the block in within the file.
  optional int64 offset_in_file = 2;
  // The block size.
  optional int64 block_size = 3;
  optional int32 maxUfsReadConcurrency = 4;
  optional int64 mountId = 5;
  // If set, do not try to cache the block locally when reading the data from the UFS.
  optional bool no_cache = 6;
  // The client does not need to set this. This is set by the worker.
  optional string user = 7;
  // If set to true, the block is possibly stored as a UFS block.
  optional bool block_in_ufs_tier = 8;
}
